# windows_AutoVoice

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
autovoice/: __init__.py  cli.py  config.py  core.py  main.py
autovoice/modules/: __init__.py  denoiser.py  plc_client.py  postprocessor.py  recorder.py  transcriber.py
docs/: plc_setup.md
scripts/: setup.bat
tests/: test_pipeline.py
