[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autovoice"
version = "2.1.0"
description = "Voice isolation, denoising, and transcription with Mitsubishi iQ-R PLC integration"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
keywords = ["whisper", "speech-to-text", "noise-reduction", "plc", "mitsubishi", "automotive"]

[project.scripts]
autovoice = "autovoice.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["autovoice*"]